--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ tokio = { version = "1.22", features = [
     "net",
     "time",
 ] }
-#tokio = { version = "1.22", features = ["full"] }
+simple_logger = "4.*"
+log = { version = "^0.4", features = ["std"] }
